# cashio

./: .env  Cargo.toml  helo.db  test.db
.github/workflows/: ci.yml
src/: cli.rs  config.rs  evaluate.rs  lib.rs  main.rs  mapper.rs  model.rs  parser.rs  repo.rs  schema.rs  t.sql
