[package]
name = "cashio"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
