[package]
name = "cashio"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
cli-table = "0.4"
futures = "0.3"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = {version = "0.4.0"}
chrono = "0.4.23"
dirs = "4.0.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls" , "sqlite"] }
tokio = { version = "1.25.0", features = ["macros"] }
